Tue Aug 21 14:36:17 CEST 2012
	Use "int" instead of "enum X" in 'va_arg' calls to be nice to
	compilers that use 'short' (i.e. 8 or 16 bit) enums but pass
	enums still as "int" in varargs. (See discussion on mailinglist). -CG/MV

Tue Aug 21 14:31:54 CEST 2012
	Reduce default size in post processor buffer (for small systems;
	performance impact on large systems should be minimal). -CG/MV

Thu Jul 19 21:48:42 CEST 2012
	Releasing libmicrohttpd 0.9.21. -CG

Thu Jul 19 11:34:50 CEST 2012
	Consistently use 'panic' function instead of ever directly
	calling 'abort ()'.  Eliminating unused mutex in SSL mode.
	Removing check in testcases that fails depending on which
	version of gnuTLS is involved. -CG

Tue Jul 17 23:50:43 CEST 2012
	Stylistic code clean up.  Allowing lookup up of trailing values
	without keys using "MHD_lookup_connection_value" with a key of NULL
	(thus achieving consistency with the existing iterator API). -CG

Tue Jul 17 22:37:05 CEST 2012
	Adding experimental (!) code for MHD operation without listen socket. -CG

Tue Jul 17 22:15:57 CEST 2012
	Making sendfile test pass again on non-W32 systems. -CG

Mon Jul  9 13:43:35 CEST 2012
	Misc changes to allow testcases to pass on W32. -LRN

Sun Jul  8 15:05:31 CEST 2012
	Misc changes to fix build on W32. -LRN

Fri Jun 22 11:31:25 CEST 2012
	Make sure sockets opened by MHD are non-inheritable by default (#2414). -CG

Tue Jun 19 19:44:53 CEST 2012
	Change various uses of time(NULL) to new MHD_monotonic_time() function to
	make timeouts immune to the system real time clock changing. -MC

Tue Jun 12 21:35:00 CEST 2012
	Adding 451 status code. -CG

Thu May 31 13:33:45 CEST 2012
	Releasing 0.9.20. -CG

Tue May 29 13:55:03 CEST 2012
	Fixed some testcase build issues with disabled post processor. -CG

Tue May 29 13:45:15 CEST 2012
	Fixing bug where MHD failed to call connection termination callback
	if a connection either was closed due to read errors or if MHD
	was terminated with certain threading models.  Added new